--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles-small.css" media="(max-width: 1023px)">
 </head>
 <body>
+    //body
     <div class="section-top">
        
     </div>
